fix uneven button paddings after font change

--- a/app/styles/_buttons.scss
+++ b/app/styles/_buttons.scss
@@ -30,14 +30,14 @@ a:hover {
 }
 
 a.btn, button.btn {
-  padding: 8px 12px 6px;
+  padding: 8px 12px;
 
   &.btn-sm {
     padding: 5px 8px;
   }
 
   &.btn-xs {
-    padding: 5px 8px 3px;
+    padding: 5px 8px;
     height: auto;
   }
 
